<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatosActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:background="@color/teal_700"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvEstado2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado" />
    <!--android:textColor="@color/green"-->

    <LinearLayout
        android:id="@+id/layConexion"
        android:layout_width="200dp"
        android:layout_height="211dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado2">

        <TextView
            android:id="@+id/tvConexionRed"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:text="@string/conexionRed"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEstado2" />

        <TextView
            android:id="@+id/tvConexionInternet"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/conexionInternet"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/tvPulsos"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvConexionRed" />

        <TextView
            android:id="@+id/tvServicio"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:text="@string/servicioARCO" />

        <TextView
            android:id="@+id/tvRssi"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:text="@string/rssi" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layCamion"
        android:layout_width="200dp"
        android:layout_height="185dp"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/layConexion"
        app:layout_constraintTop_toBottomOf="@+id/tvMarcha">


        <TextView
            android:id="@+id/tvPulsos"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/pulsos" />

        <TextView
            android:id="@+id/tvAnalogica"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/analogica" />

        <TextView
            android:id="@+id/tvAnalogica2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/analogica2" />

        <TextView
            android:id="@+id/tvCuba"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/black"
            android:text="@string/giroCuba" />

        <TextView
            android:id="@+id/tvGiroCuba"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/cuba" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvMarcha"
        android:layout_width="130dp"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/marcha"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/layConexion"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado2" />

    <ImageView
        android:id="@+id/ledMarcha"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/led_apagado"
        app:layout_constraintStart_toEndOf="@+id/tvMarcha"
        app:layout_constraintTop_toBottomOf="@+id/tvEstado2" />

    <TextView
        android:id="@+id/tvTrama"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layConexion" />

    <LinearLayout
        android:id="@+id/layPosicion1"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrama">


        <TextView
            android:id="@+id/tvTramaNS"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/tramaNS" />

        <TextView
            android:id="@+id/tvLatitud"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/latitud" />

        <TextView
            android:id="@+id/tvLongitud"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/longitud" />

        <TextView
            android:id="@+id/tvEstadoGPS"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/estadoGPS" />

        <Button
            android:id="@+id/btnRele"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableRight="@drawable/led_apagado_enano"
            android:text="@string/rele" />

        <Button
            android:id="@+id/btnCAN"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:drawableRight="@drawable/led_apagado_enano"
            android:text="@string/can"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRele" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/layPosicion2"
        android:layout_width="200dp"
        android:layout_height="220dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrama">


        <TextView
            android:id="@+id/tvTramaEW"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/tramaEW" />

        <TextView
            android:id="@+id/tvSatelites"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/satelites" />

        <TextView
            android:id="@+id/tvVelocidad"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/velocidad" />

        <TextView
            android:id="@+id/tvOrientacion"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:textColor="@color/black"
            android:text="@string/orientacion" />

        <Button
            android:id="@+id/btnPosicion"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/posicion" />

        <Button
            android:id="@+id/btnID"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/id" />


    </LinearLayout>

    <Button
        android:id="@+id/btnDesconectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="25dp"
        android:text="@string/desconectar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layPosicion1" />

    <TextView
        android:id="@+id/tvID"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/idModulo"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDesconectar" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="106dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvID"
        app:layout_constraintTop_toBottomOf="@+id/btnDesconectar" />


    <!--



        <ImageView
            android:id="@+id/ledRele"
            android:layout_width="20dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/led_apagado" />

        <ImageView
            android:id="@+id/ledCan"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="93dp"
            app:layout_constraintStart_toEndOf="@+id/btnCAN"
            app:layout_constraintTop_toBottomOf="@+id/tvLongitud"
            app:srcCompat="@drawable/led_apagado" />    -->



</androidx.constraintlayout.widget.ConstraintLayout>